Initialized docker db, updated env, initialized prisma, configured db connection, created user model, created init migration

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ JWT_SECRET=
 ENV=dev
 
 # Database Config
-DATABASE_URL=
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/ams?schema=public
 
 # Client Config
 CLIENT_URL=
