--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
+    "qrcode": "^1.5.4",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3",
@@ -30,6 +32,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.8.1",
+    "@types/qrcode": "^1.5.5",
     "dotenv-cli": "^7.4.2",
     "prisma": "^5.21.1",
     "ts-node": "^10.9.2"
