Installed nodemailer and ejs with their types packages, updated env.example with SMTP configuration, added sendMail util which we will later use for sending new QR codes and other emails

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,10 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/ams?schema=public
 
 # Client Config
 CLIENT_URL=
+
+# Email Config
+SMTP_NAME=
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_EMAIL=
+SMTP_PASSWORD=
