--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.6",
     "qrcode": "^1.5.4",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
@@ -29,9 +31,11 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.8.1",
+    "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
     "dotenv-cli": "^7.4.2",
     "prisma": "^5.21.1",
