--- a/package.json
+++ b/package.json
@@ -37,7 +37,13 @@
     "@types/node": "^22.8.1",
     "@types/nodemailer": "^7.0.1",
     "@types/qrcode": "^1.5.5",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "dotenv-cli": "^7.4.2",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.6.2",
     "prisma": "^5.21.1",
     "ts-node": "^10.9.2"
   }
